--- a/ShinyApps/index.html
+++ b/ShinyApps/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <h1>Paul's Shiny Apps</h1>
-<p>When you click the links below, if you don't see a plot immediately, you'll have to wait a few minutes for the full R-script to run and cache the results. After that, the plots should update quickly (even if you leave and return to the page).
+<p>When you click the links below, if you don't see a plot immediately, you may have to wait a few minutes for the full R-script to run and cache the results. After that, the plots should update quickly (even if you leave and return to the page).
 <ul>
 
     <li><a class="code" href="beeralytics/">beeralytics</a></li>  
@@ -32,5 +32,6 @@
     <li><a class="code" href="journaling-csc791-doc-graphs-communities-optimize/">journaling-csc791-doc-graphs-communities-optimize/</a></li>
     <li><a class="code" href="journaling-csc791-url-embeddings/">journaling-csc791-url-embeddings/</a></li>
 </ul>
+<p>Source code available <a href="https://github.com/LAS-NCSU/journaling-analytics/tree/master/ShinyApps">here</a>.
 <p>Contact me with any questions, comments, or suggestions: pjones@ncsu.edu
 
