--- a/ShinyApps/index.html
+++ b/ShinyApps/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Paul's Shiny Apps</title>
+  <title>Shiny Apps Index</title>
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
   <style type="text/css">
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<h1>Paul's Shiny Apps</h1>
+<h1>Shiny Apps Index</h1>
 <p>When you click the links below, if you don't see a plot immediately, you may have to wait a few minutes for the full R-script to run and cache the results. After that, the plots should update quickly (even if you leave and return to the page).
 <ul>
 
@@ -30,6 +30,7 @@
     <li><a class="code" href="journaling-csc791-doc-graphs/">journaling-csc791-doc-graphs/</a></li>  
     <li><a class="code" href="journaling-csc791-doc-graphs-communities/">journaling-csc791-doc-graphs-communities/</a></li>
     <li><a class="code" href="journaling-csc791-doc-graphs-communities-optimize/">journaling-csc791-doc-graphs-communities-optimize/</a></li>
+    <li><a class="code" href="journaling-csc791-doc2vec-graphs-communities-optimize/">journaling-csc791-doc2vec-graphs-communities-optimize/</a></li>
     <li><a class="code" href="journaling-csc791-url-embeddings/">journaling-csc791-url-embeddings/</a></li>
 </ul>
 <p>Source code available <a href="https://github.com/LAS-NCSU/journaling-analytics/tree/master/ShinyApps">here</a>.
