--- a/ShinyApps/index.html
+++ b/ShinyApps/index.html
@@ -32,6 +32,7 @@
     <li><a class="code" href="journaling-csc791-doc-graphs-communities-optimize/">journaling-csc791-doc-graphs-communities-optimize/</a></li>
     <li><a class="code" href="journaling-csc791-doc2vec-graphs-communities-optimize/">journaling-csc791-doc2vec-graphs-communities-optimize/</a></li>
     <li><a class="code" href="journaling-csc791-url-embeddings/">journaling-csc791-url-embeddings/</a></li>
+    <li><a class="code" href="journaling-ps598-url-embeddings/">journaling-ps598-url-embeddings/ (Beta)</a></li>
 </ul>
 <p>Source code available <a href="https://github.com/LAS-NCSU/journaling-analytics/tree/master/ShinyApps">here</a>.
 <p>Contact me with any questions, comments, or suggestions: pjones@ncsu.edu
