--- a/ShinyApps/index.html
+++ b/ShinyApps/index.html
@@ -30,7 +30,7 @@
     <li><a class="code" href="journaling-csc791-doc-graphs/">journaling-csc791-doc-graphs/</a></li>  
     <li><a class="code" href="journaling-csc791-doc-graphs-communities/">journaling-csc791-doc-graphs-communities/</a></li>
     <li><a class="code" href="journaling-csc791-doc-graphs-communities-optimize/">journaling-csc791-doc-graphs-communities-optimize/</a></li>
-    <li><a class="code" href="journaling-csc791-doc2vec-graphs-communities-optimize/">journaling-csc791-doc2vec-graphs-communities-optimize/</a></li>
+    <li><a class="code" href="journaling-csc791-doc2vec-graphs-communities-optimize/">journaling-csc791-doc2vec-graphs-communities-optimize/ (Alpha)</a></li>
     <li><a class="code" href="journaling-csc791-url-embeddings/">journaling-csc791-url-embeddings/</a></li>
     <li><a class="code" href="journaling-ps598-url-embeddings/">journaling-ps598-url-embeddings/ (Beta)</a></li>
 </ul>
