--- a/ShinyApps/index.html
+++ b/ShinyApps/index.html
@@ -21,11 +21,10 @@
 </head>
 <body>
 
-<h1>Shiny Apps Index</h1>
+<h1>Paul's Journaling Data Analysis R-Shiny Apps</h1>
 <p>When you click the links below, if you don't see a plot immediately, you may have to wait a few minutes for the full R-script to run and cache the results. After that, the plots should update quickly (even if you leave and return to the page).
 <ul>
 
-    <li><a class="code" href="beeralytics/">beeralytics</a></li>  
     <li><a class="code" href="journaling-csc791-doc-embeddings/">journaling-csc791-doc-embeddings/</a></li>
     <li><a class="code" href="journaling-csc791-doc-graphs/">journaling-csc791-doc-graphs/</a></li>  
     <li><a class="code" href="journaling-csc791-doc-graphs-communities/">journaling-csc791-doc-graphs-communities/</a></li>
@@ -35,5 +34,6 @@
     <li><a class="code" href="journaling-ps598-url-embeddings/">journaling-ps598-url-embeddings/ (Beta)</a></li>
 </ul>
 <p>Source code available <a href="https://github.com/LAS-NCSU/journaling-analytics/tree/master/ShinyApps">here</a>.
+<p>Also, just for fun, here's some <a class="code" href="beeralytics/">beeralytics</a>.
 <p>Contact me with any questions, comments, or suggestions: pjones@ncsu.edu
 
